k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starter-ware
  labels:
    app.kubernetes.io/part-of: starter-ware
