k8s/30-pocketbase-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketbase
  namespace: starter-ware
  labels:
    app: pocketbase
    app.kubernetes.io/part-of: starter-ware
spec:
  type: ClusterIP
  selector:
    app: pocketbase
  ports:
    - name: http
      port: 8090
      targetPort: 8090
