k8s/50-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: starter-ware
  labels:
    app: webapp
    app.kubernetes.io/part-of: starter-ware
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - name: http
      port: 3000
      targetPort: 3000
